- KERNEOS-46 : Added a "open in the browser" button to IFrame windows - KERNEOS-47 : Make sure that IFrame window buttons tooltips are not hidden by the IFrame
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/jasmine/kerneos/trunk@5464 0ed64165-3322-0410-a05a-e88151b9e9ba

--- a/modules/core/client/src/main/assets/styles.css
+++ b/modules/core/client/src/main/assets/styles.css
@@ -162,6 +162,15 @@ IFrameModuleWindow{
     downSkin: Embed(source="restore_up.png");
 }
 
+.iFrameWindowNavigateExternallyButton {
+    upSkin: Embed(source="arrow_up_right_up.png");
+    overSkin: Embed(source="arrow_up_right_over.png");
+    downSkin: Embed(source="arrow_up_right_up.png");
+}
+
+.iFrameWindowSeparator {
+}
+
 
 /*******************************************************************************
  * Taskbar
